# PUBG-Erangel-Circle-Predictor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: collect-data.yml
data/: circle_train.sqlite
data/assets/: erangel_official_map_source.json  erangel_registered_to_reference_meta.json
data/dashboard/: training_dashboard.html
data/models/: circle_transition_metrics.json
data/processed/: circles.csv  match_sequences.csv  matches.csv  phase_vectors.csv  plane_routes.csv  route_phase1_summary.csv
docs/: automation.md  collection_plan.md  data_design.md
scripts/: build_exe.ps1  register_daily_task.ps1  run_auto_collect_daily.ps1  run_auto_collect_once.ps1
src/circle_train/: __init__.py  analysis.py  auto_collect.py  collector.py  config.py  dashboard.py  predict.py  pubg_api.py  readme_log.py  storage.py  telemetry_parser.py  train.py  visualize.py
tools/CircleTrainAutoCollector/: CircleTrainAutoCollector.csproj  Program.cs
