[project]
name = "pubg-erangel-circle-predictor"
version = "0.1.0"
description = "PUBG Erangel plane-route and circle prediction data collector."
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
]

[project.scripts]
pubg-circle-collect = "circle_train.collector:main"
pubg-circle-analyze = "circle_train.analysis:main"
pubg-circle-auto = "circle_train.auto_collect:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
